data/derived/comb/progs/unify/prog1085.ml.out
Characters 112-113:
  if (makeRand (0,1) = 0) then expr ^ "VarX"
                       ^
Error: This expression has type int but an expression was expected of type
         int * int -> int
